unpackaged/main/default/objects/Response__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>