unpackaged/main/default/objects/Response__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Analysis Inprogress</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>